--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,17 @@
 
       <%= yield %>
       <%= render 'layouts/footer' %>
-      <%= debug(params) if Rails.env.development? %>
+
+      <!-- ## -->
+      <% if Rails.env.development? %>
+        <%= debug({ "params" => params,
+	            "remote_ip" => request.remote_ip,
+	            "user_agent" => request.user_agent
+	          }) %>
+      <% end %>
+      <!-- <%= debug(params) if Rails.env.development? %> -->
+
+
     </div>
   </body>
 </html>
