--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,4 +1,5 @@
-<%= render 'shared/error_messages' %>
+<!-- ## USER: instruction to comment NOT in tut. -->
+<%#= render 'shared/error_messages' %>
 
 <%= f.label :name %>
 <%= f.text_field :name %>
